--- a/Week03/LectureApp/app/src/main/res/layout/adminlayout.xml
+++ b/Week03/LectureApp/app/src/main/res/layout/adminlayout.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txtAdmin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Admin Page"
