--- a/Assignment1/app/src/main/res/layout/activity_main.xml
+++ b/Assignment1/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/portrait_background_v3"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -26,16 +27,6 @@
             android:text="@string/appName"
             android:textAlignment="textStart"
             android:textSize="18sp" />
-
-        <Button
-            android:id="@+id/btnLanguage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#00FFFFFF"
-            android:paddingTop="20dp"
-            android:text="🇻🇳"
-            android:textAlignment="viewEnd" />
 
     </LinearLayout>
 
@@ -125,6 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:enabled="false"
                 android:text="@string/btnFall" />
         </LinearLayout>
 
