--- a/Assignment2/app/src/main/res/values/colors.xml
+++ b/Assignment2/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="chip_bg_color">#D9D9D9</color>
     <color name="chip_text_color">#585858</color>
     <color name="default_stroke">#ccc</color>
+    <color name="secondary_stroke">#727272</color>
 </resources>
