--- a/Assignment2/app/src/main/res/layout/activity_main.xml
+++ b/Assignment2/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtProductNameDetail"
+                android:id="@+id/txtStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_bold"
@@ -44,7 +44,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/txtCurrentBalanceDetail"
+            android:id="@+id/txtCurrentBalance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_rectangle_border_container"
@@ -81,29 +81,30 @@
                 android:id="@+id/itemCarousel"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:layout_marginBottom="50dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgLeftSide"
-                    android:layout_width="30dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.3"
                     android:alpha="0.2"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <ImageView
                     android:id="@+id/imgMainSide"
-                    android:layout_width="wrap_content"
+                    android:layout_width="500dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <ImageView
                     android:id="@+id/imgRightSide"
-                    android:layout_width="30dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.3"
                     android:alpha="0.2"
                     tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
@@ -117,15 +118,16 @@
 
                 <TextView
                     android:id="@+id/txtStatusItem"
+                    style="@style/StatusItemPrimary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
                     android:fontFamily="@font/inter_medium"
                     android:letterSpacing="0.1"
                     android:paddingLeft="12sp"
                     android:paddingTop="7sp"
                     android:paddingRight="12sp"
                     android:paddingBottom="7sp"
-                    style="@style/StatusItemPrimary"
                     android:text="RENTED"
                     android:textAlignment="textEnd"
                     android:textSize="23sp" />
@@ -185,6 +187,73 @@
                     android:textSize="60sp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/accessoriesSeparator"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_vertical"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:gravity="center_horizontal"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="1dp"
+                    android:padding="0dp"
+                    android:background="@color/default_stroke" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:letterSpacing="0.1"
+                    android:textColor="@color/secondary_stroke"
+                    android:fontFamily="@font/inter_light"
+                    android:text="RENTED ACCESSORIES"
+                    android:gravity="center_horizontal"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:gravity="center_horizontal"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="0dp"
+                    android:background="@color/default_stroke" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipAccessories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.chip.Chip
+                        style="@style/FilterTag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hot" />
+
+                    <com.google.android.material.chip.Chip
+                        style="@style/FilterTag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Guitar" />
+
+                </com.google.android.material.chip.ChipGroup>
+            </LinearLayout>
+
+
 
         </LinearLayout>
 
