--- a/Assignment2/app/src/main/res/layout/detail_renting_layout.xml
+++ b/Assignment2/app/src/main/res/layout/detail_renting_layout.xml
@@ -5,7 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:id="@+id/navBar"
@@ -70,7 +72,8 @@
         app:layout_constraintBottom_toTopOf="@+id/footerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/navBar">
+        app:layout_constraintTop_toBottomOf="@+id/navBar"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -86,8 +89,8 @@
 
                 <ImageView
                     android:id="@+id/imgProductDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_weight="0"
                     tools:srcCompat="@tools:sample/avatars" />
 
@@ -97,25 +100,6 @@
                     android:orientation="vertical"
                     android:paddingLeft="10dp">
 
-
-                    <com.google.android.material.chip.ChipGroup
-                        android:id="@+id/chipDetailsArea"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <com.google.android.material.chip.Chip
-                            style="@style/FilterTag"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Hot" />
-
-                        <com.google.android.material.chip.Chip
-                            style="@style/FilterTag"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Guitar" />
-
-                    </com.google.android.material.chip.ChipGroup>
 
                     <TextView
                         android:id="@+id/txtInstrumentNameDetail"
@@ -142,6 +126,64 @@
 
 
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/formSeparator2"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center_vertical"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:gravity="center_horizontal"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="1dp"
+                    android:padding="0dp"
+                    android:background="@color/default_stroke" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:letterSpacing="0.1"
+                    android:textColor="@color/secondary_stroke"
+                    android:fontFamily="@font/inter_light"
+                    android:text="SELECT ACCESSORIES"
+                    android:gravity="center_horizontal"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:gravity="center_horizontal"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="0dp"
+                    android:background="@color/default_stroke" />
+
+            </LinearLayout>
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipDetailsArea"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.chip.Chip
+                    style="@style/FilterTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hot" />
+
+                <com.google.android.material.chip.Chip
+                    style="@style/FilterTag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Guitar" />
+
+            </com.google.android.material.chip.ChipGroup>
 
             <LinearLayout
                 android:id="@+id/formSeparator"
@@ -186,7 +228,8 @@
                 android:id="@+id/rentingForm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/txtName"
@@ -200,6 +243,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/name_input"
+                        android:lines="1"
+                        android:inputType="text"
 
                         />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -216,6 +261,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/email_input"
+                        android:lines="1"
+                        android:inputType="textEmailAddress"
 
                         />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -232,7 +279,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/renting_input"
-
+                        android:lines="1"
+                        android:text="1"
+                        android:inputType="number"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -244,6 +293,9 @@
                 android:background="@drawable/rating_container"
                 android:gravity="center"
                 android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
 
