--- a/Assignment2/app/src/main/res/layout/detail_renting_layout.xml
+++ b/Assignment2/app/src/main/res/layout/detail_renting_layout.xml
@@ -282,6 +282,7 @@
                         android:lines="1"
                         android:text="1"
                         android:inputType="number"
+                        android:id="@+id/txtRentingPeriodEditText"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
