--- a/Assignment3/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/Assignment3/app/src/main/res/layout/activity_transaction_detail.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransactionDetailActivity"
+    tools:context=".ui.TransactionDetailActivity"
     android:background="@color/background">
 
     <!-- Navigation Bar -->
@@ -61,6 +61,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/txtTransaction"
                 android:text="Transaction"
                 android:textColor="@color/text_muted"
                 android:textSize="20sp"
@@ -126,37 +127,6 @@
                         android:background="@color/divider"
                         android:layout_marginBottom="12dp" />
 
-                    <!-- Time Row -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="12dp">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Time"
-                            android:textColor="@color/text_muted"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:id="@+id/txtTime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="2:30 PM"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <!-- Divider -->
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_marginBottom="12dp" />
-
                     <!-- Category Row -->
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -178,6 +148,7 @@
                             android:gravity="center_vertical">
 
                             <ImageView
+                                android:id="@+id/imgCategoryIcon"
                                 android:src="@drawable/ic_shopping"
                                 app:tint="@color/purple"
                                 android:layout_width="20dp"
@@ -195,8 +166,6 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-
 
             <!-- Category Overview -->
             <androidx.cardview.widget.CardView
@@ -220,6 +189,7 @@
                         android:layout_marginBottom="8dp">
 
                         <ImageView
+                            android:id="@+id/imgCategorySummaryIcon"
                             android:src="@drawable/ic_shopping"
                             app:tint="@color/purple"
                             android:layout_width="20dp"
@@ -228,6 +198,7 @@
                              />
 
                         <TextView
+                            android:id="@+id/txtCategorySummaryTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="18dp"
@@ -246,6 +217,25 @@
                         android:textColor="@color/text_dark"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <!-- Today's History Title -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Spending overview"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cardBalance" />
+
+            <FrameLayout
+                android:id="@+id/chartContainer"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                />
         </LinearLayout>
     </ScrollView>
 
