--- a/Assignment3/app/src/main/res/layout/item_transaction.xml
+++ b/Assignment3/app/src/main/res/layout/item_transaction.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="8dp"
@@ -20,8 +21,10 @@
         <FrameLayout
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:id="@+id/iconContainer"
             android:background="@drawable/bg_icon_circle"
-            android:layout_marginEnd="16dp">
+            android:layout_marginEnd="16dp"
+            tools:ignore="ExtraText">
 
             <ImageView
                 android:id="@+id/imgCategoryIcon"
