Assignment 3: Update chart; fix backend logic

--- a/Assignment3/app/src/main/res/layout/activity_transaction_edit.xml
+++ b/Assignment3/app/src/main/res/layout/activity_transaction_edit.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransactionList"
+    tools:context=".ui.AddEditTransactionActivity"
     android:background="@color/background">
 
     <!-- Navigation Bar -->
@@ -30,7 +30,7 @@
             android:src="@drawable/ic_arrow_back" />
 
         <TextView
-            android:id="@+id/txtTransactionTitle"
+            android:id="@+id/txtScreenTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -148,6 +148,7 @@
 
             <!-- Transaction Type -->
             <androidx.cardview.widget.CardView
+                android:id="@+id/cardTransactionType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="12dp"
