--- a/Assignment3/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/Assignment3/app/src/main/res/layout/activity_transaction_detail.xml
@@ -215,27 +215,20 @@
                         android:layout_marginTop="5dp"
                         android:lineHeight="25sp"
                         android:textColor="@color/text_dark"/>
+
+                    <fragment
+                        android:id="@+id/chartContainer"
+                        android:name="com.example.assignment3.ui.ChartFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <!-- Today's History Title -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Spending overview"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cardBalance" />
 
-            <FrameLayout
-                android:id="@+id/chartContainer"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                />
+
         </LinearLayout>
     </ScrollView>
 
